Fix bug on modal: modal image not centered when opened

--- a/instagram-like/src/index.css
+++ b/instagram-like/src/index.css
@@ -1,5 +1,5 @@
 body {
-  width: 80%;
+  /*width: 80%;
   margin: 30px auto;
-  font-family: sans-serif;
+  font-family: sans-serif;*/
 }
